# Orison

./: .gitignore  LEARNING-NOTES-STEP1-4.txt  README.md  development-roadmap.txt  game-story-simple.txt  game-story.txt  pyproject.toml  python-oop-topics.txt
.github/: copilot-instructions.md
src/orison/: __init__.py  __main__.py
src/orison/engine/: __init__.py  game_state.py  scene.py
src/orison/io/pygame/: app.py
src/orison/io/terminal/: app.py
src/orison/models/: __init__.py  arbiter.py  contract.py  mark.py
tests/: test_smoke.py  test_step10_save_load.py  test_step11_12_hardening.py  test_step1_2.py  test_step3_inventory_flags.py  test_step4_dialogue.py  test_step5_arbiter.py  test_step6_secret_clause.py  test_step7_decision.py  test_step8_reputation.py  test_step9_ritual.py
